--- a/dev.css
+++ b/dev.css
@@ -15,15 +15,18 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-.footer1 p{
-    margin-left:25px;
+.footer1 a{
+    margin-right:25px;
+    text-align:center;
     margin:0 auto;
+    display:block;
     color:#99C7F7;
 }
 
 .footer1 {
     padding:20px;
-    margin-top:-8px;
+    text-align:center;
+    margin:0 auto;
 }
 
 .headshot{
@@ -32,12 +35,15 @@ body {
 }
 
 .mid{
-    color:black;
+    color:white;
     align-items:center;
     margin-bottom:5px;
     width:100%;
     height:450px;
     text-shadow: 3px 3px 2px #007BFF;
+    background-image:url(sf.jpg);
+    background-repeat: no-repeat;
+    background-size:100% 450px;
 }
 
 #bg {
@@ -110,3 +116,29 @@ body {
     transition:0.5s;
 }
 
+.bio {
+    text-align:center;
+    margin:0 auto;
+    display:block;
+    font-family:lora;
+    margin-top:-50px;
+    margin-bottom:-20px;
+}
+
+.bio h1 {
+    font-family:source sans pro;
+    margin-bottom:-10px;
+}
+
+.portfolio img {
+    height:150px;
+    width:280px;
+    margin:50px;
+}
+
+.portfolio {
+    background-color:white;
+    align-items:center;
+    margin:0 auto;
+    display:block;
+}
