--- a/dev.css
+++ b/dev.css
@@ -16,17 +16,26 @@ body {
 }
 
 .footer1 a{
-    margin-right:25px;
+    text-decoration:none;
+    margin-left:25px;
     text-align:center;
-    margin:0 auto;
-    display:block;
     color:#99C7F7;
+}
+
+.footer1 a:hover {
+    cursor:pointer;
+    color:#007BFF;
+    transition:0.5s;
 }
 
 .footer1 {
     padding:20px;
     text-align:center;
     margin:0 auto;
+}
+
+.footer1 p {
+    margin-top:-3px;
 }
 
 .headshot{
@@ -40,7 +49,7 @@ body {
     margin-bottom:5px;
     width:100%;
     height:450px;
-    text-shadow: 3px 3px 2px #007BFF;
+    text-shadow: 3px 3px 2px #002FFF;
     background-image:url(sf.jpg);
     background-repeat: no-repeat;
     background-size:100% 450px;
@@ -57,63 +66,22 @@ body {
 .mid p {
     margin:0 auto;
     font-family: 'Lora', serif;
-    font-size:60px;
+    font-size:75px;
     z-index:9;
 }
 
-.info {
-    margin-top:-5px;
-    height:100px;
-}
-
-.info p{
-    margin:0 auto;
-    text-align:center;
-    width:750px;
-    margin-top:5px;
-}
-
-.info a {
-    color:#99C7F7;
-    text-decoration:none;
-    transition:0.5s;
-    margin-right:20px;
-    text-align:center;
-}
-
-.info a:hover {
-    color:#d8d8d8;
-    transition:0.5s;
-}
 
 .footer2 p {
     margin-left:20px;
     margin:0 auto;
     font-family: 'Lora', serif;
     font-size:15px;
-    margin-top:5px;
+    margin-top:10px;
 }
 
 .footer2 {
+    margin-top:-5px;
     height:50px;
-}
-
-#about:hover {
-    cursor:pointer;
-    color:#007BFF;
-    transition:0.5s;
-}
-
-#links:hover{
-    cursor:pointer;
-    color:#007BFF;
-    transition:0.5s;
-}
-
-#portfolio:hover{
-    cursor:pointer;
-    color:#007BFF;
-    transition:0.5s;
 }
 
 .bio {
@@ -125,9 +93,25 @@ body {
     margin-bottom:-20px;
 }
 
+.bio p {
+    font-size:15px;
+}
+
 .bio h1 {
     font-family:source sans pro;
     margin-bottom:-10px;
+}
+
+.bio a {
+    text-decoration:none;
+    color:#99C7F7;
+    transition:0.5s;
+    margin:25px;
+}
+
+.bio a:hover {
+    color:white;
+    transition:0.5s;
 }
 
 .portfolio img {
